Book CRUD manage set up
